--- a/history.txt
+++ b/history.txt
@@ -4,6 +4,12 @@
 [?] - Проблема.
 
 11.03.2005
+	[+] Версия 1.01
+	[+] Добавлено автообновление панели.
+	[+] Сделаны некоторые косметические изменения.
+	[!] Исправлена ошибка, утечки памяти при обновлении панели.
+
+11.03.2005
 	[+] Вышла первая версия. 1.0
 	[+] Отражаются текущие tcp и udp соединения.
 	[?] Пока что отражаются соединения на момент вызова плагина и не обновляются через 
