--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,25 @@
 [!] - Исправление ошибки.
 [?] - Проблема.
 
+15.03.2005
+	[+] Версия 1.20
+	[+] Добавлено разрешение имен и портов описание которых взято с IANA известные на момент 
+	23 февраля 2005г.
+	[+] Добавлена настройка плагина из меню внешних подключаемых модулей.
+	[?] В связи с двумя предыдущими пунктами родились пару проблем: обновление панели при
+	разрешении имен происходит достаточно долго и FAR начинает протормаживать, так что я
+	советую при таком режиме не использовать автообновление панели, вторая же проблема в том
+	что файл с описанием портов достаточно велик и используется он при разрешении имен и 
+	портов и если установить эту опцию в конфигурации то FAR будет загружаться несколько 
+	медленее чем обычно, если эту опцию отключить то файл прогружаться не будет и будет
+	загружен в момент выбора опции разрешения имен и портов в меню. В общем получается лучше
+	этим режимом пользоваться как можно реже из-за тормозов, но если интересно посмотреть 
+	имена то есть возможность включить. Возможно в слежующих версиях я эти проблемы 
+	как-нибудь смогу решить.
+	[+] Создана домашняя страничка плагина http://farnetstat.narod.ru/
+	[!] Немного подправлены значения которые отображаются в колонке Статуса.
+	[!] Все таки изменил размер колонок.
+
 11.03.2005
 	[+] Версия 1.01
 	[+] Добавлено автообновление панели.
