--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,14 @@
 [!] - Исправление ошибки.
 [?] - Проблема.
 
+17.03.2005
+	[+] Версия 1.21
+	[-] Убраны постоянные тормоза во время обновления панелей при установленой опции 
+	разрешения имен и портов. Тормозить может в момент первого запуска и когда встречается
+	новый неизвестный IP который не может разрешиться. Я ускорения работы добился за счет 
+	того что сохраняю уже встреченые раз IP в динамической таблице. В общем теперь с именами
+	стал плагин работать на много лучше и приятнее.
+
 15.03.2005
 	[+] Версия 1.20
 	[+] Добавлено разрешение имен и портов описание которых взято с IANA известные на момент 
