--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,13 @@
 [!] - Исправление ошибки.
 [?] - Проблема.
 
+25.03.2005
+	[+] Версия 1.22
+	[-] Совсем избавился от тормозов интерфейса, за счет того что теперь разрешение имени 
+	происходит в отдельном потоке. Появился от этого побочный эффект, что с впервые 
+	встреченым IP запись отображается не именем, а IP, а лишь потом когда IP будет разрешен
+	он будет отображен.
+
 17.03.2005
 	[+] Версия 1.21
 	[-] Убраны постоянные тормоза во время обновления панелей при установленой опции 
