--- a/FarNetStat_ru.lng
+++ b/FarNetStat_ru.lng
@@ -7,5 +7,8 @@
 "Статус"
 "&Есть"
 "&Отмена"
-"Разрешать имена хостов и порты"
+"Разрешать имена хостов"
 "Автообновление панелей"
+"Разрешать имена портов"
+"ID процесса:  "
+"Имя процесса: "
