--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,17 @@
 [!] - Исправление ошибки.
 [?] - Проблема.
 
+02.04.2005
+	[+] Версия 1.23
+	[+] Появилась новая возможность, теперь в системе Win XP и выше по кнопке F3 можно 
+	посмотреть процесс и его PID, который держит выбраное соединение. Показывается информация
+	под текущей позицией курсора. Ограничение системой обусловлено тем что это используются 
+	недокументированые особенности. В общем все должно работать и под Win 2000, кроме этой 
+	функции.
+	[+] Имена портов разрешаются отдельно от хостов, для этого появился новый пунктик в
+	конфигурации.
+	[!] Исправлена ошибка, не всегда прогружались порты. Теперь все ОК.
+
 25.03.2005
 	[+] Версия 1.22
 	[-] Совсем избавился от тормозов интерфейса, за счет того что теперь разрешение имени 
