--- a/FarNetStat_en.lng
+++ b/FarNetStat_en.lng
@@ -7,5 +7,8 @@
 "Status"
 "&Ok"
 "&Cancel"
-"Resolve names and ports"
+"Resolve names"
 "Autorefresh panels"
+"Resolve ports"
+"Process ID:   "
+"Process name: "
