--- a/history.txt
+++ b/history.txt
@@ -3,6 +3,10 @@
 [!] - Исправление ошибки.
 [?] - Проблема.
 
+08.04.2005
+	[+] Версия 1.24
+	[!] Исправлен HANDLE leek при обновлении панели.
+
 02.04.2005
 	[+] Версия 1.23
 	[+] Появилась новая возможность, теперь в системе Win XP и выше по кнопке F3 можно 
